--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>contact</h1>
+
+<p>this is a contact page for the <a href="http://www.fununa.co.il">fununa</a> app.</p>
