--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
 <h1>Sample app</h1>
 
 <p>this is a home page for the <a href="http://www.fununa.co.il">fununa</a> app.</p>
+
+
+<%= link_to "Sign up now!", '#', :class => "signup_button round"   %>
