--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,4 @@
 <p>this is a home page for the <a href="http://www.fununa.co.il">fununa</a> app.</p>
 
 
-<%= link_to "Sign up now!", '#', :class => "signup_button round"   %>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round"   %>
