--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,12 @@
 <li><%= link_to "Home", root_path %></li>
   <% if signed_in? %>
   <li><%= link_to "Profile", current_user %> </li>
+  <li><%= link_to "Settings", edit_user_path(self.current_user) %></li>
   <% end %>
 <li><%= link_to "Help", help_path %></li>
   <% if signed_in? %>
     <li><%= link_to "Sign Out", signout_path %></li>
-  <%else %>
+  <% else %>
     <li><%= link_to "Sign In", signin_path %></li>
   <%end %>
 </ul>
